[gd_scene load_steps=3 format=3 uid="uid://c74n6v23cjt7m"]

[ext_resource type="Script" uid="uid://bl5gos0i20xiu" path="res://scenes/responsive_item_list.gd" id="1_a723t"]
[ext_resource type="Script" uid="uid://dsxbjwyln1xd4" path="res://scenes/views/file_list_view.gd" id="1_aen7i"]

[node name="FileListView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aen7i")

[node name="Toolbar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DisplayModeButton" type="OptionButton" parent="Toolbar"]
layout_mode = 2
flat = true
selected = 0
item_count = 2
popup/item_0/text = "Grid"
popup/item_0/id = 0
popup/item_1/text = "List"
popup/item_1/id = 1

[node name="VSeparator2" type="VSeparator" parent="Toolbar"]
layout_mode = 2

[node name="Label" type="Label" parent="Toolbar"]
layout_mode = 2
text = "icon size"

[node name="IconSizeButton" type="OptionButton" parent="Toolbar"]
layout_mode = 2
flat = true
selected = 1
item_count = 3
popup/item_0/text = "Small"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Large"
popup/item_2/id = 2

[node name="VSeparator" type="VSeparator" parent="Toolbar"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Refresh"
flat = true

[node name="ContextMenu" type="PopupMenu" parent="."]
unique_name_in_owner = true
hide_on_checkable_item_selection = false
hide_on_state_item_selection = true

[node name="ImageList" type="ItemList" parent="." node_paths=PackedStringArray("list_view")]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 12
select_mode = 1
allow_reselect = true
text_overrun_behavior = 4
max_columns = 0
same_column_width = true
fixed_column_width = 128
icon_mode = 0
fixed_icon_size = Vector2i(96, 96)
script = ExtResource("1_a723t")
list_view = NodePath("..")

[connection signal="item_selected" from="Toolbar/DisplayModeButton" to="ImageList" method="set_view_mode"]
[connection signal="item_selected" from="Toolbar/IconSizeButton" to="ImageList" method="set_icon_size"]
[connection signal="pressed" from="Toolbar/RefreshButton" to="." method="refresh"]
[connection signal="item_selected" from="ImageList" to="." method="_on_item_selected"]
[connection signal="multi_selected" from="ImageList" to="." method="_on_image_list_multi_selected"]
